
Table utilizadores {
  id_utilizador int [pk, increment]
  nome_utilizador varchar(50) [not null, unique]
  password_hash varchar(255) [not null]
  remember_token varchar(100)
  ultimo_acesso datetime
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}
Table password_resets {
  id_password_reset int [pk, increment]
  id_utilizador int [not null]
  token varchar(255) [not null, unique]
  expira_em datetime [not null]
  usado boolean [not null, default: false]
  created_at datetime [not null]
}

Table servicos {
  id_servico int [pk, increment]
  nome_servico varchar(100) [not null, unique, note: 'Urgência, UCI, Bloco Operatório, Consultas, Laboratório, Radiologia, Reabilitação, Armazém']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table localizacoes {
  id_localizacao int [pk, increment]
  edificio varchar(100) [not null]
  piso varchar(50) [not null]
  sala varchar(50) [not null]
  id_servico int [not null]
  responsavel varchar(100)
  contacto varchar(20)
  email varchar(100)
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (edificio, piso, sala) [unique]
  }
}

Table categorias {
  id_categoria int [pk, increment]
  nome_categoria varchar(80) [not null, unique, note: 'Monitorização, Suporte de Vida, Diagnóstico, Imagiologia, Laboratório, Terapia, Cirurgia, Reabilitação, Esterilização']
  descricao text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table estados_equipamento {
  id_estado int [pk, increment]
  nome_estado varchar(50) [not null, unique, note: 'Ativo, Em manutenção, Em calibração, Em quarentena, Inativo, Abatido']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table criticidades {
  id_criticidade int [pk, increment]
  nivel varchar(50) [not null, unique, note: 'Baixa, Média, Alta, Suporte de vida']
  descricao text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table tipos_entrada {
  id_tipo_entrada int [pk, increment]
  tipo varchar(50) [not null, unique, note: 'Compra, Aluguer, Doação, Empréstimo']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table tipos_fornecedor {
  id_tipo_fornecedor int [pk, increment]
  tipo varchar(80) [not null, unique, note: 'Fabricante, Distribuidor, Assistência técnica, Consumíveis ou acessórios']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table fornecedores {
  id_fornecedor int [pk, increment]
  nome_empresa varchar(150) [not null]
  nif varchar(9) [not null, unique]
  id_tipo_fornecedor int [not null]
  telefone varchar(20)
  email varchar(100)
  website varchar(150)
  pessoa_contacto varchar(100)
  telefone_contacto varchar(20)
  email_contacto varchar(100)
  morada varchar(200)
  codigo_postal varchar(20)
  cidade varchar(100)
  pais varchar(100)
  observacoes text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table equipamentos {
  id_equipamento int [pk, increment]
  codigo_interno varchar(20) [not null, unique]
  designacao varchar(150) [not null]
  id_categoria int [not null]
  marca varchar(80)
  modelo varchar(80) [not null]
  fabricante varchar(100) [not null]
  numero_serie varchar(100) [not null]
  ano_fabrico int
  id_estado int [not null]
  id_criticidade int [not null]
  id_localizacao int [not null]
  observacoes text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (fabricante, modelo, numero_serie) [unique]
  }
}

Table entradas_equipamento {
  id_entrada int [pk, increment]
  id_equipamento int [not null]
  id_tipo_entrada int [not null]
  data_entrada date
  entidade_associada varchar(150)
  custo_aquisicao decimal(10,2)
  numero_fatura varchar(80)
  metodo_pagamento varchar(80)
  valor_mensal decimal(10,2)
  data_fim_aluguer date
  condicoes_aluguer text
  entidade_doadora varchar(150)
  valor_estimado decimal(10,2)
  condicoes_doacao text
  entidade_proprietaria varchar(150)
  data_inicio_emprestimo date
  data_prevista_devolucao date
  condicoes_emprestimo text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table tipos_relacao_fornecedor {
  id_tipo_relacao int [pk, increment]
  tipo varchar(80) [not null, unique, note: 'Fabricante, Fornecedor, Assistência técnica, Manutenção, Consumíveis']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table equipamento_fornecedor {
  id_equipamento int [not null]
  id_fornecedor int [not null]
  id_tipo_relacao int [not null]
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    (id_equipamento, id_fornecedor, id_tipo_relacao) [pk]
  }
}

Table estados_componentes {
  id_estado_componente int [pk, increment]
  estado varchar(50) [not null, unique, note: 'Funcional, Em manutenção, Avariado, Substituído, Abatido']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table componentes {
  id_componente int [pk, increment]
  id_equipamento int [not null]
  codigo_componente varchar(30) [not null, unique]
  nome_componente varchar(150) [not null]
  id_estado_componente int [not null]
  notificacao text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table consumiveis {
  id_consumivel int [pk, increment]
  id_equipamento int [not null]
  nome_consumivel varchar(150) [not null]
  stock_atual int [not null]
  stock_minimo int [not null]
  ultima_atualizacao date
  observacoes text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table tipos_documento {
  id_tipo_documento int [pk, increment]
  tipo varchar(100) [not null, unique, note: 'Manual, Manual de utilizador, Manual de componente, Manual de manutenção, Ficha Técnica, Certificação, Relatório, Relatório de uso, Relatório de teste, Registo de substituição, Fatura, Comprovativo de pagamento, Contrato de aluguer, Termo de doação, Termo de empréstimo, Guia de transporte, Auto de receção, Planta, Instalação, Garantia, Contrato, Declaração, Outro']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table documentos {
  id_documento int [pk, increment]
  nome_documento varchar(150) [not null]
  id_tipo_documento int [not null]
  nome_ficheiro varchar(200) [not null]
  caminho_ficheiro varchar(255) [not null]
  data_documento date
  data_validade date
  tamanho_ficheiro varchar(30)
  formato_ficheiro varchar(20)
  id_equipamento int
  id_entrada int
  id_fornecedor int
  id_localizacao int
  id_componente int
  id_garantia int
  id_contrato int
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table estados_garantia {
  id_estado_garantia int [pk, increment]
  estado varchar(50) [not null, unique, note: 'Ativa, Expirada']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table garantias {
  id_garantia int [pk, increment]
  id_equipamento int [not null]
  nome_garantia varchar(150) [not null]
  data_inicio date [not null]
  data_fim date [not null]
  id_estado_garantia int [not null]
  observacoes text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table contratos {
  id_contrato int [pk, increment]
  id_equipamento int [not null]
  id_fornecedor int [not null]
  nome_contrato varchar(150) [not null]
  data_inicio date [not null]
  data_fim date [not null]
  valor_anual decimal(10,2)
  observacoes text
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table mensagens_contacto {
  id_mensagem int [pk, increment]
  nome varchar(100) [not null]
  email varchar(100) [not null]
  assunto varchar(150)
  mensagem text [not null]
  data_envio datetime [not null]
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table secoes_publicas {
  id_seccao int [pk, increment]
  nome_seccao varchar(100) [not null, unique, note: 'Início, Sobre Nós, Serviços, Contacta-nos, Rodapé']
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table conteudos_publicos {
  id_conteudo int [pk, increment]
  id_seccao int [not null]
  campo varchar(100) [not null, note: 'titulo, texto, imagem, email, telefone, horario, localizacao']
  valor text [not null]
  ativo boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table historico {
  id_historico int [pk, increment]
  id_utilizador int [not null]
  modulo varchar(80) [not null, note: 'Equipamentos, Fornecedores, Localizações, Documentação, Garantias, Contratos, Gestão, Mensagens, Login']
  acao varchar(80) [not null, note: 'Criação, Edição, Remoção, Alteração de password']
  registo varchar(150)
  detalhes text
  data_hora datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table lembretes {
  id_lembrete int [pk, increment]
  id_utilizador int [not null]
  descricao varchar(255) [not null]
  concluido boolean [not null, default: false]
  created_at datetime [not null]
}

Ref: utilizadores.id_utilizador < password_resets.id_utilizador
Ref: servicos.id_servico < localizacoes.id_servico
Ref: localizacoes.id_localizacao < equipamentos.id_localizacao
Ref: categorias.id_categoria < equipamentos.id_categoria
Ref: estados_equipamento.id_estado < equipamentos.id_estado
Ref: criticidades.id_criticidade < equipamentos.id_criticidade
Ref: equipamentos.id_equipamento < entradas_equipamento.id_equipamento
Ref: tipos_entrada.id_tipo_entrada < entradas_equipamento.id_tipo_entrada
Ref: tipos_fornecedor.id_tipo_fornecedor < fornecedores.id_tipo_fornecedor
Ref: equipamentos.id_equipamento < equipamento_fornecedor.id_equipamento
Ref: fornecedores.id_fornecedor < equipamento_fornecedor.id_fornecedor
Ref: tipos_relacao_fornecedor.id_tipo_relacao < equipamento_fornecedor.id_tipo_relacao
Ref: equipamentos.id_equipamento < componentes.id_equipamento
Ref: estados_componentes.id_estado_componente < componentes.id_estado_componente
Ref: equipamentos.id_equipamento < consumiveis.id_equipamento
Ref: tipos_documento.id_tipo_documento < documentos.id_tipo_documento
Ref: equipamentos.id_equipamento < documentos.id_equipamento
Ref: entradas_equipamento.id_entrada < documentos.id_entrada
Ref: fornecedores.id_fornecedor < documentos.id_fornecedor
Ref: localizacoes.id_localizacao < documentos.id_localizacao
Ref: componentes.id_componente < documentos.id_componente
Ref: garantias.id_garantia < documentos.id_garantia
Ref: contratos.id_contrato < documentos.id_contrato
Ref: equipamentos.id_equipamento < garantias.id_equipamento
Ref: estados_garantia.id_estado_garantia < garantias.id_estado_garantia
Ref: equipamentos.id_equipamento < contratos.id_equipamento
Ref: fornecedores.id_fornecedor < contratos.id_fornecedor
Ref: secoes_publicas.id_seccao < conteudos_publicos.id_seccao
Ref: utilizadores.id_utilizador < historico.id_utilizador
Ref: utilizadores.id_utilizador < lembretes.id_utilizador